Extract solution using graphplan

--- a/planning.ipynb
+++ b/planning.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "include(\"aimajulia.jl\");\n",
     "\n",
-    "using aimajulia;"
+    "using Main.aimajulia;"
    ]
   },
   {
@@ -80,7 +80,7 @@
     {
      "data": {
       "text/plain": [
-       "10-element Array{aimajulia.Expression,1}:\n",
+       "10-element Array{Expression,1}:\n",
        " Connected(Bucharest, Pitesti)                            \n",
        " Connected(Pitesti, Rimnicu)                              \n",
        " Connected(Rimnicu, Sibiu)                                \n",
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "# Sibiu to Bucharest\n",
-    "precond_pos = [expr(\"ft(Sibiu)\")];\n",
+    "precond_pos = [expr(\"At(Sibiu)\")];\n",
     "precond_neg = [];\n",
     "effect_add = [expr(\"At(Bucharest)\")];\n",
     "effect_rem = [expr(\"At(Sibiu)\")];\n",
@@ -232,7 +232,7 @@
     {
      "data": {
       "text/plain": [
-       "aimajulia.PDDL(aimajulia.FirstOrderLogicKnowledgeBase(aimajulia.Expression[Connected(Bucharest, Pitesti), Connected(Pitesti, Rimnicu), Connected(Rimnicu, Sibiu), Connected(Sibiu, Fagaras), Connected(Fagaras, Bucharest), Connected(Pitesti, Craiova), Connected(Craiova, Rimnicu), (Connected(x, y) ==> Connected(y, x)), ((Connected(x, y) & Connected(y, z)) ==> Connected(x, z)), At(Sibiu)]), aimajulia.PlanningAction[aimajulia.PlanningAction(\"Fly\", (Sibiu, Bucharest), aimajulia.Expression[ft(Sibiu)], aimajulia.Expression[], aimajulia.Expression[At(Bucharest)], aimajulia.Expression[At(Sibiu)]), aimajulia.PlanningAction(\"Fly\", (Bucharest, Sibiu), aimajulia.Expression[At(Bucharest)], aimajulia.Expression[], aimajulia.Expression[At(Sibiu)], aimajulia.Expression[At(Bucharest)]), aimajulia.PlanningAction(\"Fly\", (Sibiu, Craiova), aimajulia.Expression[At(Sibiu)], aimajulia.Expression[], aimajulia.Expression[At(Craiova)], aimajulia.Expression[At(Sibiu)]), aimajulia.PlanningAction(\"Fly\", (Craiova, Sibiu), aimajulia.Expression[At(Craiova)], aimajulia.Expression[], aimajulia.Expression[At(Sibiu)], aimajulia.Expression[At(Craiova)]), aimajulia.PlanningAction(\"Fly\", (Bucharest, Craiova), aimajulia.Expression[At(Bucharest)], aimajulia.Expression[], aimajulia.Expression[At(Craiova)], aimajulia.Expression[At(Bucharest)]), aimajulia.PlanningAction(\"Fly\", (Craiova, Bucharest), aimajulia.Expression[At(Craiova)], aimajulia.Expression[], aimajulia.Expression[At(Bucharest)], aimajulia.Expression[At(Craiova)]), aimajulia.PlanningAction(\"Drive\", (x, y), aimajulia.Expression[At(x)], aimajulia.Expression[], aimajulia.Expression[At(y)], aimajulia.Expression[At(x)])], aimajulia.goal_test)"
+       "PDDL(FirstOrderLogicKnowledgeBase(Expression[Connected(Bucharest, Pitesti), Connected(Pitesti, Rimnicu), Connected(Rimnicu, Sibiu), Connected(Sibiu, Fagaras), Connected(Fagaras, Bucharest), Connected(Pitesti, Craiova), Connected(Craiova, Rimnicu), (Connected(x, y) ==> Connected(y, x)), ((Connected(x, y) & Connected(y, z)) ==> Connected(x, z)), At(Sibiu)]), PlanningAction[PlanningAction(\"Fly\", (Sibiu, Bucharest), Expression[At(Sibiu)], Expression[], Expression[At(Bucharest)], Expression[At(Sibiu)]), PlanningAction(\"Fly\", (Bucharest, Sibiu), Expression[At(Bucharest)], Expression[], Expression[At(Sibiu)], Expression[At(Bucharest)]), PlanningAction(\"Fly\", (Sibiu, Craiova), Expression[At(Sibiu)], Expression[], Expression[At(Craiova)], Expression[At(Sibiu)]), PlanningAction(\"Fly\", (Craiova, Sibiu), Expression[At(Craiova)], Expression[], Expression[At(Sibiu)], Expression[At(Craiova)]), PlanningAction(\"Fly\", (Bucharest, Craiova), Expression[At(Bucharest)], Expression[], Expression[At(Craiova)], Expression[At(Bucharest)]), PlanningAction(\"Fly\", (Craiova, Bucharest), Expression[At(Craiova)], Expression[], Expression[At(Bucharest)], Expression[At(Craiova)]), PlanningAction(\"Drive\", (x, y), Expression[At(x)], Expression[], Expression[At(y)], Expression[At(x)])], Main.aimajulia.goal_test)"
       ]
      },
      "execution_count": 7,
@@ -243,21 +243,76 @@
    "source": [
     "prob = PDDL(knowledge_base, [fly_s_b, fly_b_s, fly_s_c, fly_c_s, fly_b_c, fly_c_b, drive], goal_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Solution:\n",
+      "nothing\n",
+      "Solution:\n",
+      "Any[Array{Any,1}[[Fly(Sibiu, Bucharest)]], Array{Any,1}[[Fly(Sibiu, Bucharest)], [Persistence(At(Bucharest))]], Array{Any,1}[[Fly(Sibiu, Craiova)], [Fly(Craiova, Bucharest)]], Array{Any,1}[[Drive(Sibiu, (Connected(x, y) & Connected(y, z)))], [Drive((Connected(x, y) & Connected(y, z)), Bucharest)]], Array{Any,1}[[Drive(Sibiu, Connected(x, y))], [Drive(Connected(x, y), Bucharest)]], Array{Any,1}[[Drive(Sibiu, Connected(y, x))], [Drive(Connected(y, x), Bucharest)]], Array{Any,1}[[Drive(Sibiu, Connected(x, z))], [Drive(Connected(x, z), Bucharest)]], Array{Any,1}[[Drive(Sibiu, Pitesti)], [Drive(Pitesti, Bucharest)]], Array{Any,1}[[Fly(Bucharest, Craiova)], [Drive(Craiova, Bucharest)]], Array{Any,1}[[Drive(Sibiu, Rimnicu)], [Drive(Rimnicu, Bucharest)]], Array{Any,1}[[Drive(Sibiu, Fagaras)], [Drive(Fagaras, Bucharest)]], Array{Any,1}[[Persistence(At(Sibiu))], [Drive(Sibiu, Bucharest)]]]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "12-element Array{Any,1}:\n",
+       " Array{Any,1}[[Fly(Sibiu, Bucharest)]]                                                                                     \n",
+       " Array{Any,1}[[Fly(Sibiu, Bucharest)], [Persistence(At(Bucharest))]]                                                       \n",
+       " Array{Any,1}[[Fly(Sibiu, Craiova)], [Fly(Craiova, Bucharest)]]                                                            \n",
+       " Array{Any,1}[[Drive(Sibiu, (Connected(x, y) & Connected(y, z)))], [Drive((Connected(x, y) & Connected(y, z)), Bucharest)]]\n",
+       " Array{Any,1}[[Drive(Sibiu, Connected(x, y))], [Drive(Connected(x, y), Bucharest)]]                                        \n",
+       " Array{Any,1}[[Drive(Sibiu, Connected(y, x))], [Drive(Connected(y, x), Bucharest)]]                                        \n",
+       " Array{Any,1}[[Drive(Sibiu, Connected(x, z))], [Drive(Connected(x, z), Bucharest)]]                                        \n",
+       " Array{Any,1}[[Drive(Sibiu, Pitesti)], [Drive(Pitesti, Bucharest)]]                                                        \n",
+       " Array{Any,1}[[Fly(Bucharest, Craiova)], [Drive(Craiova, Bucharest)]]                                                      \n",
+       " Array{Any,1}[[Drive(Sibiu, Rimnicu)], [Drive(Rimnicu, Bucharest)]]                                                        \n",
+       " Array{Any,1}[[Drive(Sibiu, Fagaras)], [Drive(Fagaras, Bucharest)]]                                                        \n",
+       " Array{Any,1}[[Persistence(At(Sibiu))], [Drive(Sibiu, Bucharest)]]                                                         "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# apddl = AbstractPDDL(knowledge_base, [fly_s_b, fly_b_s, fly_s_c, fly_c_s, fly_b_c, fly_c_b, drive], goal_test)\n",
+    "folkb = FirstOrderLogicKnowledgeBase(knowledge_base)\n",
+    "gpp = GraphPlanProblem(prob, folkb)\n",
+    "\n",
+    "graphplan(gpp, ([expr(\"At(Bucharest)\")], []))\n",
+    "# execute_action(gpp, nothing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.0",
+   "display_name": "Julia 1.1.1",
    "language": "julia",
-   "name": "julia-0.6"
+   "name": "julia-1.1"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.6.0"
+   "version": "1.1.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
