Fix drive action to have Connected precondition

--- a/planning.ipynb
+++ b/planning.ipynb
@@ -176,12 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Drive\n",
-    "precond_pos = [expr(\"At(x)\")];\n",
+    "precond_pos = [expr(\"At(x)\"), expr(\"Connected(x,y)\")];\n",
     "precond_neg = [];\n",
     "effect_add = [expr(\"At(y)\")];\n",
     "effect_rem = [expr(\"At(x)\")];\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "goal_text (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PDDL(FirstOrderLogicKnowledgeBase(Expression[Connected(Bucharest, Pitesti), Connected(Pitesti, Rimnicu), Connected(Rimnicu, Sibiu), Connected(Sibiu, Fagaras), Connected(Fagaras, Bucharest), Connected(Pitesti, Craiova), Connected(Craiova, Rimnicu), (Connected(x, y) ==> Connected(y, x)), ((Connected(x, y) & Connected(y, z)) ==> Connected(x, z)), At(Sibiu)]), PlanningAction[PlanningAction(\"Fly\", (Sibiu, Bucharest), Expression[At(Sibiu)], Expression[], Expression[At(Bucharest)], Expression[At(Sibiu)]), PlanningAction(\"Fly\", (Bucharest, Sibiu), Expression[At(Bucharest)], Expression[], Expression[At(Sibiu)], Expression[At(Bucharest)]), PlanningAction(\"Fly\", (Sibiu, Craiova), Expression[At(Sibiu)], Expression[], Expression[At(Craiova)], Expression[At(Sibiu)]), PlanningAction(\"Fly\", (Craiova, Sibiu), Expression[At(Craiova)], Expression[], Expression[At(Sibiu)], Expression[At(Craiova)]), PlanningAction(\"Fly\", (Bucharest, Craiova), Expression[At(Bucharest)], Expression[], Expression[At(Craiova)], Expression[At(Bucharest)]), PlanningAction(\"Fly\", (Craiova, Bucharest), Expression[At(Craiova)], Expression[], Expression[At(Bucharest)], Expression[At(Craiova)]), PlanningAction(\"Drive\", (x, y), Expression[At(x)], Expression[], Expression[At(y)], Expression[At(x)])], Main.aimajulia.goal_test)"
+       "PDDL(FirstOrderLogicKnowledgeBase(Expression[Connected(Bucharest, Pitesti), Connected(Pitesti, Rimnicu), Connected(Rimnicu, Sibiu), Connected(Sibiu, Fagaras), Connected(Fagaras, Bucharest), Connected(Pitesti, Craiova), Connected(Craiova, Rimnicu), (Connected(x, y) ==> Connected(y, x)), ((Connected(x, y) & Connected(y, z)) ==> Connected(x, z)), At(Sibiu)]), PlanningAction[PlanningAction(\"Fly\", (Sibiu, Bucharest), Expression[At(Sibiu)], Expression[], Expression[At(Bucharest)], Expression[At(Sibiu)]), PlanningAction(\"Fly\", (Bucharest, Sibiu), Expression[At(Bucharest)], Expression[], Expression[At(Sibiu)], Expression[At(Bucharest)]), PlanningAction(\"Fly\", (Sibiu, Craiova), Expression[At(Sibiu)], Expression[], Expression[At(Craiova)], Expression[At(Sibiu)]), PlanningAction(\"Fly\", (Craiova, Sibiu), Expression[At(Craiova)], Expression[], Expression[At(Sibiu)], Expression[At(Craiova)]), PlanningAction(\"Fly\", (Bucharest, Craiova), Expression[At(Bucharest)], Expression[], Expression[At(Craiova)], Expression[At(Bucharest)]), PlanningAction(\"Fly\", (Craiova, Bucharest), Expression[At(Craiova)], Expression[], Expression[At(Bucharest)], Expression[At(Craiova)]), PlanningAction(\"Drive\", (x, y), Expression[At(x), Connected(x, y)], Expression[], Expression[At(y)], Expression[At(x)])], Main.aimajulia.goal_test)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -257,28 +257,20 @@
       "Solution:\n",
       "nothing\n",
       "Solution:\n",
-      "Any[Array{Any,1}[[Fly(Sibiu, Bucharest)]], Array{Any,1}[[Fly(Sibiu, Bucharest)], [Persistence(At(Bucharest))]], Array{Any,1}[[Fly(Sibiu, Craiova)], [Fly(Craiova, Bucharest)]], Array{Any,1}[[Drive(Sibiu, (Connected(x, y) & Connected(y, z)))], [Drive((Connected(x, y) & Connected(y, z)), Bucharest)]], Array{Any,1}[[Drive(Sibiu, Connected(x, y))], [Drive(Connected(x, y), Bucharest)]], Array{Any,1}[[Drive(Sibiu, Connected(y, x))], [Drive(Connected(y, x), Bucharest)]], Array{Any,1}[[Drive(Sibiu, Connected(x, z))], [Drive(Connected(x, z), Bucharest)]], Array{Any,1}[[Drive(Sibiu, Pitesti)], [Drive(Pitesti, Bucharest)]], Array{Any,1}[[Fly(Bucharest, Craiova)], [Drive(Craiova, Bucharest)]], Array{Any,1}[[Drive(Sibiu, Rimnicu)], [Drive(Rimnicu, Bucharest)]], Array{Any,1}[[Drive(Sibiu, Fagaras)], [Drive(Fagaras, Bucharest)]], Array{Any,1}[[Persistence(At(Sibiu))], [Drive(Sibiu, Bucharest)]]]"
+      "Any[Array{Any,1}[[Fly(Sibiu, Bucharest)]], Array{Any,1}[[Fly(Sibiu, Bucharest)], [Persistence(At(Bucharest))]], Array{Any,1}[[Fly(Sibiu, Craiova)], [Fly(Craiova, Bucharest)]], Array{Any,1}[[Drive(Sibiu, Fagaras), Persistence(Connected(Fagaras, Bucharest))], [Drive(Fagaras, Bucharest)]]]"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "12-element Array{Any,1}:\n",
-       " Array{Any,1}[[Fly(Sibiu, Bucharest)]]                                                                                     \n",
-       " Array{Any,1}[[Fly(Sibiu, Bucharest)], [Persistence(At(Bucharest))]]                                                       \n",
-       " Array{Any,1}[[Fly(Sibiu, Craiova)], [Fly(Craiova, Bucharest)]]                                                            \n",
-       " Array{Any,1}[[Drive(Sibiu, (Connected(x, y) & Connected(y, z)))], [Drive((Connected(x, y) & Connected(y, z)), Bucharest)]]\n",
-       " Array{Any,1}[[Drive(Sibiu, Connected(x, y))], [Drive(Connected(x, y), Bucharest)]]                                        \n",
-       " Array{Any,1}[[Drive(Sibiu, Connected(y, x))], [Drive(Connected(y, x), Bucharest)]]                                        \n",
-       " Array{Any,1}[[Drive(Sibiu, Connected(x, z))], [Drive(Connected(x, z), Bucharest)]]                                        \n",
-       " Array{Any,1}[[Drive(Sibiu, Pitesti)], [Drive(Pitesti, Bucharest)]]                                                        \n",
-       " Array{Any,1}[[Fly(Bucharest, Craiova)], [Drive(Craiova, Bucharest)]]                                                      \n",
-       " Array{Any,1}[[Drive(Sibiu, Rimnicu)], [Drive(Rimnicu, Bucharest)]]                                                        \n",
-       " Array{Any,1}[[Drive(Sibiu, Fagaras)], [Drive(Fagaras, Bucharest)]]                                                        \n",
-       " Array{Any,1}[[Persistence(At(Sibiu))], [Drive(Sibiu, Bucharest)]]                                                         "
+       "4-element Array{Any,1}:\n",
+       " Array{Any,1}[[Fly(Sibiu, Bucharest)]]                                                                         \n",
+       " Array{Any,1}[[Fly(Sibiu, Bucharest)], [Persistence(At(Bucharest))]]                                           \n",
+       " Array{Any,1}[[Fly(Sibiu, Craiova)], [Fly(Craiova, Bucharest)]]                                                \n",
+       " Array{Any,1}[[Drive(Sibiu, Fagaras), Persistence(Connected(Fagaras, Bucharest))], [Drive(Fagaras, Bucharest)]]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
