Planning for open doors #8

--- a/planning.ipynb
+++ b/planning.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "goal_text (generic function with 1 method)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "PDDL(FirstOrderLogicKnowledgeBase(Expression[Connected(Bucharest, Pitesti), Connected(Pitesti, Rimnicu), Connected(Rimnicu, Sibiu), Connected(Sibiu, Fagaras), Connected(Fagaras, Bucharest), Connected(Pitesti, Craiova), Connected(Craiova, Rimnicu), (Connected(x, y) ==> Connected(y, x)), ((Connected(x, y) & Connected(y, z)) ==> Connected(x, z)), At(Sibiu)]), PlanningAction[PlanningAction(\"Fly\", (Sibiu, Bucharest), Expression[At(Sibiu)], Expression[], Expression[At(Bucharest)], Expression[At(Sibiu)]), PlanningAction(\"Fly\", (Bucharest, Sibiu), Expression[At(Bucharest)], Expression[], Expression[At(Sibiu)], Expression[At(Bucharest)]), PlanningAction(\"Fly\", (Sibiu, Craiova), Expression[At(Sibiu)], Expression[], Expression[At(Craiova)], Expression[At(Sibiu)]), PlanningAction(\"Fly\", (Craiova, Sibiu), Expression[At(Craiova)], Expression[], Expression[At(Sibiu)], Expression[At(Craiova)]), PlanningAction(\"Fly\", (Bucharest, Craiova), Expression[At(Bucharest)], Expression[], Expression[At(Craiova)], Expression[At(Bucharest)]), PlanningAction(\"Fly\", (Craiova, Bucharest), Expression[At(Craiova)], Expression[], Expression[At(Bucharest)], Expression[At(Craiova)]), PlanningAction(\"Drive\", (x, y), Expression[At(x), Connected(x, y)], Expression[], Expression[At(y)], Expression[At(x)])], Main.aimajulia.goal_test)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,20 +246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Solution:\n",
-      "nothing\n",
-      "Solution:\n",
-      "Any[Array{Any,1}[[Fly(Sibiu, Bucharest)]], Array{Any,1}[[Fly(Sibiu, Bucharest)], [Persistence(At(Bucharest))]], Array{Any,1}[[Fly(Sibiu, Craiova)], [Fly(Craiova, Bucharest)]], Array{Any,1}[[Drive(Sibiu, Fagaras), Persistence(Connected(Fagaras, Bucharest))], [Drive(Fagaras, Bucharest)]]]"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -270,7 +259,7 @@
        " Array{Any,1}[[Drive(Sibiu, Fagaras), Persistence(Connected(Fagaras, Bucharest))], [Drive(Fagaras, Bucharest)]]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,6 +271,266 @@
     "\n",
     "graphplan(gpp, ([expr(\"At(Bucharest)\")], []))\n",
     "# execute_action(gpp, nothing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trial 1: Use `Closed(Door)`/`Open(Door)` predicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FirstOrderLogicKnowledgeBase(Expression[Closed(Door1), Closed(Door2), Door(Door1), Door(Door2)])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kb = [\n",
+    "    expr(\"Closed(Door1)\"),\n",
+    "    expr(\"Closed(Door2)\"),\n",
+    "    expr(\"Door(Door1)\"),\n",
+    "    expr(\"Door(Door2)\"),\n",
+    "]\n",
+    "precond_pos = [expr(\"Closed(d)\"), expr(\"Door(d)\")]\n",
+    "precond_neg = []\n",
+    "effect_add = [expr(\"Open(d)\")]\n",
+    "effect_rem = [expr(\"Closed(d)\")]\n",
+    "open_door = PlanningAction(expr(\"OpenDoor(d)\"), (precond_pos, precond_neg), (effect_add, effect_rem))\n",
+    "fol_kb = FirstOrderLogicKnowledgeBase(kb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Uppercase names denote constants\n",
+    "ask(fol_kb, expr(\"Closed(D)\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Dict{Any,Any}(d=>Door1), Dict{Any,Any}(d=>Door2))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Lowercase names denote variables\n",
+    "ask(fol_kb, expr(\"Closed(d)\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PlanningAction(\"OpenDoor\", (d,), Expression[Closed(d), Door(d)], Expression[], Expression[Open(d)], Expression[Closed(d)])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "open_door"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function goal_text(kb::PDDL)\n",
+    "    return ask(kb, expr(\"Open(Door1)\"))\n",
+    "end\n",
+    "prob = PDDL(kb, [open_door], goal_test)\n",
+    "gpp = GraphPlanProblem(prob, fol_kb)\n",
+    "graphplan(gpp, ([expr(\"Open(Door1)\")], []))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Array{Any,1}:\n",
+       " Any[Any[OpenDoor(Door1)], -1]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gpp.solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Any,1}:\n",
+       " Array{Any,1}[[OpenDoor(Door1)]]                            \n",
+       " Array{Any,1}[[OpenDoor(Door1)], [Persistence(Open(Door1))]]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract_solution(gpp, [expr(\"Open(Door1)\")], [], -1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trial 2: Use `State(Door, x)` predicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Dict{Any,Any}(x=>Closed,d=>Door1), Dict{Any,Any}(x=>Closed,d=>Door2))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kb = [\n",
+    "    expr(\"State(Door1, Closed)\"),\n",
+    "    expr(\"State(Door2, Closed)\"),\n",
+    "    expr(\"Door(Door1)\"),\n",
+    "    expr(\"Door(Door2)\"),\n",
+    "]\n",
+    "precond_pos = [expr(\"State(d, Closed)\"), expr(\"Door(d)\")]\n",
+    "precond_neg = []\n",
+    "effect_add = [expr(\"State(d, Open)\")]\n",
+    "effect_rem = [expr(\"State(d, Closed)\")]\n",
+    "open_door = PlanningAction(expr(\"OpenDoor(d)\"), (precond_pos, precond_neg), (effect_add, effect_rem))\n",
+    "fol_kb = FirstOrderLogicKnowledgeBase(kb)\n",
+    "ask(fol_kb, expr(\"State(d, x)\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function goal_text(kb::PDDL)\n",
+    "    return ask(kb, expr(\"State(Door1, Open)\"))\n",
+    "end\n",
+    "prob = PDDL(kb, [open_door], goal_test)\n",
+    "gpp = GraphPlanProblem(prob, fol_kb)\n",
+    "graphplan(gpp, ([expr(\"State(Door1, Open)\")], []))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Any,1}:\n",
+       " Array{Any,1}[[OpenDoor(Door1)]]                                   \n",
+       " Array{Any,1}[[OpenDoor(Door1)], [Persistence(State(Door1, Open))]]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract_solution(gpp, [expr(\"State(Door1, Open)\")], [], -1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Execute a single action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FirstOrderLogicKnowledgeBase(Expression[State(Door1, Closed), Door(Door1), Door(Door2), State(Door2, Open)])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "execute_action(open_door, fol_kb, (expr(\"Door2\"),))\n",
+    "fol_kb"
    ]
   },
   {
